charts + evolution learning
+ added charts to monitor learning data
+ added example of evolution learning
+ added maven to use JFreeCharts