@@ -2,6 +2,7 @@ package network;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Random;
 
 public class Network {
 
@@ -51,14 +52,14 @@ public class Network {
     // sets the input neurons activations
     public void insertInput(List<Double> input){
         for (int i = 0; i != input.size(); i++){
-            layers.getFirst().neurons().get(i).setActivation(input.get(i));
+            layers.get(0).neurons().get(i).setActivation(input.get(i));
         }
     }
 
     // returns the activations of the last layer
     public List<Double> getOutput(){
         List<Double> output = new ArrayList<>();
-        for (Neuron neuron : layers.getLast().neurons()){
+        for (Neuron neuron : layers.get(layers.size()-1).neurons()){
             output.add(neuron.getActivation());
         }
         return output;
@@ -75,10 +76,10 @@ public class Network {
 
     // update all deltas in the network
     private void updateHiddenDeltas() {
-        for (int l = layers.size() - 2; l > 0; l--) { // skip output and input layer
+        for (int l = layers.size() - 2; l > 0; l--) { // skip output layer
             for (Neuron neuron : layers.get(l).neurons()) {
                 double output = neuron.getActivation();
-                double sum = 0.0;
+                double sum = 0;
                 for (Neuron next : layers.get(l + 1).neurons()) {
                     for (Connection conn : next.getConnections()) {
                         if (conn.getSourceNeuron() == neuron) {
@@ -93,12 +94,12 @@ public class Network {
     }
 
     // update all output deltas
-    private void updateOutputDeltas(List<Double> targetOutputs) {
-        List<Neuron> outputNeurons = layers.getLast().neurons();
+    private void updateOutputDeltas(List<Double> optimalOutputs) {
+        List<Neuron> outputNeurons = layers.get(layers.size()-1).neurons();
         for (int i = 0; i < outputNeurons.size(); i++) {
             Neuron neuron = outputNeurons.get(i);
             double output = neuron.getActivation();
-            double error = output - targetOutputs.get(i); // calc error
+            double error = output - optimalOutputs.get(i); // calc error
             double delta = error * output * (1 - output); // delta learning rule
             neuron.setDelta(delta);
         }
@@ -113,4 +114,68 @@ public class Network {
             }
         }
     }
+
+    // test
+
+    private double lowestLoss = Double.MAX_VALUE;
+    private double currentLoss = 0;
+    private List<Connection> connections = new ArrayList<>();
+
+    public void evolutionLearning(List<Double> input, List<Double> optimalOutput){
+        insertInput(input);
+        updateAllActivations();
+
+        // calculating loss
+        List<Double> output = getOutput();
+
+        double error = output.get(0) - optimalOutput.get(0);
+        double loss = error * error;
+        loss /= output.size();
+
+        currentLoss += loss;
+    }
+
+    public void finishEpoch(int epochSize, int epochNumber){
+        currentLoss /= epochSize;
+
+        if (currentLoss < lowestLoss){
+            // save success
+            lowestLoss = currentLoss;
+            connections.clear();
+            for (Layer layer: layers){
+                for (Neuron neuron: layer.neurons()){
+                    connections.addAll(neuron.getConnections());
+                }
+            }
+        } else {
+            // reset to best know version
+            if (!connections.isEmpty()) {
+                int i = 0;
+                for (Layer layer : layers) {
+                    for (Neuron neuron : layer.neurons()) {
+                        for (Connection connection : neuron.getConnections()) {
+                            connection.setWeight(connections.get(i).getWeight());
+                            i++;
+                        }
+                    }
+                }
+            }
+
+            // calculating change
+            double mutationRate = Math.max(0.01, 1.0 / Math.sqrt(epochNumber+1));
+            Random random = new Random();
+
+            for (Layer layer : layers){
+                for (Neuron neuron : layer.neurons()){
+                    for (Connection connection : neuron.getConnections()){
+                        double change = (random.nextDouble() * 2 - 1) * mutationRate;
+                        connection.setWeight(connection.getWeight() + change);
+                    }
+                }
+            }
+        }
+
+        currentLoss = 0;
+}
+
 }
